<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wifi Explorer</string>

    <string name="notify.scan">Scan wifi networks…</string>
    <string name="notify.enable_scan">Turning on wifi…</string>
    <string name="notify.scan.success">Wifi scan results available</string>

    <string name="detail.card1.title">SSID</string>
    <string name="detail.card2.title">BSSID</string>
    <string name="detail.card3.title">Capabilities</string>
    <string name="detail.card4.title">Signal Strength</string>
    <string name="detail.card5.title">Frequency</string>
    <string name="detail.card6.title">RSSI</string>
    <string name="detail.card7.title">Actual distance</string>
    <string name="detail.card8.title">Discovered locations</string>

    <string name="main.show.map">Map</string>
    <string name="main.show.favourites">Favourites</string>
    <string name="activity.favourites.title">Favourites</string>
    <string name="activity.map.title">Wifi Map</string>

    <string name="list_item_save_img">Save</string>
    <string name="list_item_signal_img">Signal strength and security</string>
    <string name="saved_wifi_element">Access point saved</string>
    <string name="removed_wifi_element">Removed from favourites</string>
    <string name="restored_wifi_element">Favourite restored</string>
    <string name="undo">UNDO</string>
    <string name="unknown">Unknown</string>
    <string name="no_information">No information available</string>

    <string name="navigation_refresh">Refresh scan results</string>
    <string name="navigation_near_wifi_list">Nearby networks</string>
    <string name="navigation_session_wifi_list">Session discovered networks</string>
    <string name="navigation_favourites">Favourites</string>
    <string name="navigation_map">Map locations</string>
    <string name="navigation_filters">Filter results</string>
    <string name="navigation_filter_all_networks">All networks</string>
    <string name="navigation_filter_open_networks">Only open networks</string>
    <string name="navigation_filter_closed_networks">Only secure networks</string>

    <string name="gps_auth_message">GPS is required for this application but seems to be disabled, do you want to enable it?</string>
    <string name="map_filter_location">Filter by location</string>
    <string name="map_filter_secure">Filter by security</string>
    <string name="dialog_location_title">Filter by location</string>
    <string name="dialog_secure_title">Filter by security</string>

    <string name="ask_remove_favourite">Remove this from favourites?</string>
    <string name="ask_add_favourite">Add this to favourites?</string>
    <string name="map_favourites">Map favourites</string>
</resources>
