<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_refresh"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/navigation_refresh" />
        <item
            android:id="@+id/navigation_near_wifi_list"
            android:icon="@drawable/ic_event"
            android:title="@string/navigation_near_wifi_list" />
        <item
            android:id="@+id/navigation_session_wifi_list"
            android:icon="@drawable/ic_event"
            android:title="@string/navigation_session_wifi_list" />
        <item
            android:id="@+id/navigation_favourites"
            android:icon="@drawable/ic_event"
            android:title="@string/navigation_favourites" />
        <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/ic_headset"
            android:title="@string/navigation_map" />
    </group>

    <item android:title="@string/navigation_filters">
        <menu>
            <item
                android:id="@+id/navigation_filter_all_networks"
                android:icon="@drawable/ic_forum"
                android:title="@string/navigation_filter_all_networks" />
            <item
                android:id="@+id/navigation_filter_open_networks"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_filter_open_networks" />
            <item
                android:id="@+id/navigation_filter_closed_networks"
                android:icon="@drawable/ic_forum"
                android:title="@string/navigation_filter_closed_networks" />
        </menu>
    </item>

</menu>
